k8s/services/external/app/zigbee2mqtt/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  type: ExternalName
  externalName: homeassistant.bar.risson.net
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
